// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";
package hotlap.v1alpha;

service CircuitService {
    rpc Read(CircuitRequest) returns (CircuitResponse) {}
}

message CircuitRequest {
    oneof params {
        string id = 1;
        string name = 2;
    }
}

message CircuitResponse {
    repeated Circuit circuits = 1;
}

message Circuit {
    string id = 1;
    string name = 2;
}
